--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.nju.ledonghealthhelper">
 
+
+    <uses-permission android:name="android.permission.INTERNET"/>
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
@@ -24,6 +26,7 @@
         <activity android:name=".activity.SignUpActivity"/>
         <activity android:name=".activity.HomeActivity"/>
         <activity android:name=".activity.PubSportEventActivity"/>
+        <activity android:name=".activity.SettingActivity"/>
     </application>
 
 </manifest>
