--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -49,6 +49,7 @@
         <activity android:name=".activity.HomeActivity"/>
         <activity android:name=".activity.PubSportEventActivity"/>
         <activity android:name=".activity.SettingActivity"/>
+        <activity android:name=".activity.RetrievePasswordActivity"/>
 
         <service android:name="com.baidu.location.f" android:enabled="true" android:process=":remote"> </service>
     </application>
